@@ -114,3 +114,4 @@ issue 125: when generating chunks in runtime, blocks are not shown until update;
            by: implementation of face-hiding to not generated chunks; this chunks are marked as generated when
            generation finished
 issue 126: top textures of BoxModel when using UV's were wrong; fixed on: 03.03.2020 by uuk
+issue 127: missing texture was always rendered, also when deactivated on missing faces; fixed on: 03.03.2020 by uuk
