@@ -93,4 +93,4 @@ issue 120:
 issue 122:
     bug: z-fighting at border between two fences
 
-[123 - 125]
+[123 - 127]
