@@ -45,7 +45,7 @@ inter_home = os.path.dirname(sys.executable).replace("\\", "/")
 def println(*msg, sep=" ", end="\n", write_into_console=True):
     if write_into_console: print(*msg, sep=sep, end=end)
     with open(log_file, mode="a") as f:
-        print(datetime.now().strftime("\n[timestamp: %H.%M.%S]"), file=f)
+        # print(datetime.now().strftime("\n[timestamp: %H.%M.%S]"), file=f)
         print(*msg, sep=sep, end=end, file=f)
 
 
